@startuml
'https://plantuml.com/class-diagram

class Materia
class Alumno
class Inscripcion

Materia "*" <--  Alumno
Materia "*" <-- Materia
Materia "*" <-- Inscripcion
Inscripcion o-- Alumno


class Materia {
-nombreMateria: String
-correlativas: List<Materia>

+cumpleCorrelativa(): Bool
}

class Alumno {
-nombre: String
-apellido: String
-materiasAprobadas: List<Materia>
-materiasAInscribirse: List<Materia>

+puedeCursar(unaMateria: Materia): Bool
-inscribirseAMaterias(materias: List<Materias)
}

class Inscripcion {
-alumno: Alumno
-materiasSolicitadas: List<Materia>

+aprobada(): Bool

}

@enduml